--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,4 +8,7 @@
     width: 370px;
     flex-direction: column;
     gap: 30px;
+    padding: 30px;
+    box-sizing: border-box;
+    border-radius: 25px;
 }
