--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,8 @@
 @import url(../blocks/game/__platform/game__platform.css);
 
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_inactive/popup_inactive.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__description/popup__description.css);
+@import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__link/popup__link.css);
