--- a/src/blocks/game/__platform/game__platform.css
+++ b/src/blocks/game/__platform/game__platform.css
@@ -1,9 +1,16 @@
 .game__platform {
-    width: 85px;
-    height: 50px;
-    background-color: none;
-    position: absolute;
-    background-image: url(../../../images/cloud-4.png);
-    background-size: cover;
-    background-position: center;
+  width: 85px;
+  height: 50px;
+  background-color: none;
+  position: absolute;
+  background-image: url(../../../images/cloud-4.png);
+  background-size: cover;
+  background-position: center;
+}
+
+@media screen and (max-width: 470px) {
+  .game__platform {
+    width: calc(100vw * 85 / 450);
+    height: calc(100vw * 50 / 450);
+  }
 }
