--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,14 +1,20 @@
 .popup {
-    position: fixed;
-    background-color: white;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    width: 370px;
-    flex-direction: column;
-    gap: 30px;
-    padding: 30px;
-    box-sizing: border-box;
-    border-radius: 25px;
+  position: fixed;
+  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  width: 370px;
+  flex-direction: column;
+  gap: 30px;
+  padding: 30px;
+  box-sizing: border-box;
+  border-radius: 25px;
+}
+
+@media screen and (max-width: 470px) {
+  .popup {
+    width: calc(100vw - 10px);
+  }
 }
