fix: fix controllers for touch screens

--- a/src/blocks/controller/__left/controller__left.css
+++ b/src/blocks/controller/__left/controller__left.css
@@ -1,8 +1,7 @@
-.game__right {
+.controller__left {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   height: 100vh;
   width: calc(100% / 2);
-  z-index: 1;
 }
