--- a/src/blocks/controller/__right/controller__right.css
+++ b/src/blocks/controller/__right/controller__right.css
@@ -1,8 +1,7 @@
-.game__left {
+.controller__right {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   height: 100vh;
   width: calc(100% / 2);
-  z-index: 1;
 }
